MySQL: decoding COM_CHANGE_USER from new clients fails
This issue was migrated from bug 10351 in our old bug tracker.
Original bug information:
Reporter: Daniël van Eeden
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: Git
Attachments:
mysql_comchusr2.pcap: sample packets
mysql_c.pcap: Sample packets (change user with connattr)
mysql_chusr_attrs.c: C program to generate sample with change user and connattr