MySQL: decode pwd and charset for COM_CHANGE_USER

This fixes decoding of authetication data in MySQL 5.6+
It also decodes the charset.

Bug: 10351
Change-Id: Ic76961e94d2e3bf15bc72e279128a5251acfd749
Reviewed-on: https://code.wireshark.org/review/3441
Reviewed-by: Evan Huus <eapache@gmail.com>
Petri-Dish: Evan Huus <eapache@gmail.com>
Reviewed-by: Anders Broman <a.broman58@gmail.com>